# gossip-protocol

./: CMakeLists.txt  MP1Node.cpp  MP1Node.h
